# jira-api-module

./: .gitignore  CURL.md  CURL_CLOUD.md  README.md  commands.md  pyproject.toml
.github/workflows/: ci.yml
docs/getting-started/: installation.md
node/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
node/.bin/: generate-api-docs.ts
node/.github/workflows/: ci.yml
node/SPEC/: JIRA-v10.x-API-milestone-1.md  JIRA-v10.x-API-notes.md  JIRA-v10.x-API.md  JIRA-v10.x-openapi.json
node/benchmarks/: cache.bench.ts  query-builder.bench.ts
node/jira-fetcher/: .npmignore  CHANGELOG.md  README.md  SPEC.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
node/jira-fetcher/docs/: ADVANCED_ADAPTERS.md  AUTHENTICATION.md  EXAMPLES.md  USAGE.md
node/jira-fetcher/src/: FetchClient.test.ts  FetchClient.ts  JiraFetchClient.test.ts  JiraFetchClient.ts  errors.test.ts  errors.ts  index.ts  types.ts
node/jira-fetcher/src/adapters/: UndiciFetchAdapter.ts  index.ts
node/jira-fetcher/src/utils/: createTimeoutSignal.test.ts  createTimeoutSignal.ts  index.ts  parseResponseData.test.ts  parseResponseData.ts
node/src/: index.ts
node/src/cli/: index.ts
node/src/cli/commands/: configure.ts  issue.ts  project.ts  user.ts
node/src/cli/utils/: output.ts  prompts.ts
node/src/core/: client.ts  types.ts
node/src/errors/: index.ts
node/src/models/: common.ts  issue.ts  project.ts  user.ts
node/src/sdk/: client.ts  index.ts
node/src/server/: index.ts
node/src/server/middleware/: auth.ts  error-handler.ts
node/src/server/routes/: batch.routes.ts  health.routes.ts  issue.routes.ts  project.routes.ts  user.routes.ts  webhook.routes.ts
node/src/services/: issue.service.ts  project.service.ts  user.service.ts
node/src/utils/: adf.ts  batch.ts  cache.ts  config.ts  logger.ts  query-builder.ts  webhook.ts
node/tests/: setup.ts
node/tests/fixtures/: mock-responses.ts
node/tests/unit/: adf.test.ts  client.test.ts  config.test.ts  errors.test.ts
node/tests/unit/services/: issue.service.test.ts  project.service.test.ts  user.service.test.ts
node/tests/unit/utils/: batch.test.ts  cache.test.ts  query-builder.test.ts  webhook.test.ts
py/: mkdocs.yml
py/docs/: index.md
py/src/jira_api/: __init__.py  config.py  exceptions.py
py/src/jira_api/models/: __init__.py  issue.py  project.py
py/src/jira_api/sdk/: __init__.py
py/src/jira_api/services/: project_service.py
py/tests/integration/: __init__.py
py/tests/unit/: __init__.py  test_issue_service.py
src/jira_api/: cli.py  server.py
src/jira_api/core/: __init__.py  client.py
src/jira_api/models/: user.py
src/jira_api/sdk/: client.py
src/jira_api/services/: __init__.py  issue_service.py  user_service.py
tests/: __init__.py
tests/unit/: test_client.py  test_exceptions.py  test_models.py
